Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-111

mount_lustre::parse_options() does not pass force* options down

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.1.0
    • Lustre 2.0.0, Lustre 2.1.0
    • None
    • 3
    • 10329

      The code look like this:
      } else if (strncmp(opt, "force", 5) == 0) {
      //XXX special check for 'force' option
      ++force;
      printf("force: %d\n", force);

      and as a result force* options are not passed down (the likes of force_over_16tb, force_over_8tb and so on).

            green Oleg Drokin
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: