LU-111 Fix force options parsing

parse_options had incorrect check for force option that matched
all force options like force_over_16tb and as a result those did
not get propagated down.

Change-Id: I46d07a6d505acc9150e2655a63be55fb7ef6954d
Signed-off-by: Oleg Drokin <green@whamcloud.com>